--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_blue">#0081DD</color>
+    <color name="dark_blue">#1976D2</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="gray">#9E9E9E</color>
+    <color name="dark_gray">#757575</color>
+    <color name="red">#ED4264</color>
+    <color name="orange">#FFAB2F</color>
+    <color name="sidebar_bg">#2D3E50</color>
+    <color name="sidebar_active">#3A9DBF</color>
+    <color name="text_primary">#333333</color>
+    <color name="text_secondary">#757575</color>
+    <color name="divider">#E0E0E0</color>
+    <color name="placeholder_bg">#E8E8E8</color>
+    <color name="placeholder_text">#606060</color>
+    <color name="shadow">#1A000000</color>
+    <color name="button_close">#030213</color>
 </resources>
