--- a/app/src/main/res/layout/dialog_edit_patient.xml
+++ b/app/src/main/res/layout/dialog_edit_patient.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="24dp">
 
@@ -123,21 +124,23 @@
         android:orientation="horizontal">
 
         <Button
+            style="@style/Widget.AppCompat.Button"
             android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginEnd="12dp"
-            android:background="@drawable/bg_button_cancel"
+            app:backgroundTint="@color/white"
             android:fontFamily="@font/plus_jakarta_sans_bold"
             android:text="Batal"
             android:textColor="#333333"
             android:textSize="14sp" />
 
         <Button
+            style="@style/Widget.AppCompat.Button"
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:background="@drawable/bg_button_primary"
+            app:backgroundTint="@color/primary_blue"
             android:fontFamily="@font/plus_jakarta_sans_bold"
             android:text="Simpan Perubahan"
             android:textColor="@color/white"
