--- a/app/src/main/res/layout/dialog_patient_pets.xml
+++ b/app/src/main/res/layout/dialog_patient_pets.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="24dp">
 
@@ -81,12 +82,13 @@
     </LinearLayout>
 
     <Button
+        style="@style/Widget.AppCompat.Button"
         android:id="@+id/btnClose"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_gravity="end"
         android:layout_marginTop="24dp"
-        android:background="@drawable/bg_button_close"
+        app:backgroundTint="@color/button_close"
         android:fontFamily="@font/plus_jakarta_sans_bold"
         android:text="Tutup"
         android:textColor="@color/white"
