--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,6 +46,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/CustomTextInputLayout"
                 android:layout_marginTop="2dp">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -66,6 +67,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/CustomTextInputLayout"
                 android:layout_marginTop="2dp">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -88,6 +90,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
+                app:endIconTint="@color/orange"
+                style="@style/CustomTextInputLayout"
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
